--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ node_modules/.vite/deps/react-router-dom.js
 node_modules/.vite/deps/react-router-dom.js.map
 node_modules/.vite/deps/react.js
 node_modules/.vite/deps/react.js.map
+dist/20250223173922.jpg
+dist/agents.json
+dist/index.html
+dist/optimizer-config.json
+dist/presets.json
+dist/assets/donate-B2JACeMf.jpg
+dist/assets/index-B--rgFqT.css
+dist/assets/index-CG9vjefu.js
