将表单相关逻辑抽离到独立的PromptForm组件中，提高了代码的可维护性和复用性 • 移除了冗余的状态变量和导入 • 添加了ErrorBoundary组件来处理潜在的错误 • 优化了组件的结构，使代码更加清晰和模块化 • 改进了状态管理，减少了不必要的重渲染

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ dist/presets.json
 dist/assets/donate-B2JACeMf.jpg
 dist/assets/index-B--rgFqT.css
 dist/assets/index-CG9vjefu.js
+docs/code-review.md
+docs/development-progress.md
