优化部分结构

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,33 @@ dist/assets/index-B--rgFqT.css
 dist/assets/index-CG9vjefu.js
 docs/code-review.md
 docs/development-progress.md
+node_modules/.vite/deps/chunk-6KBGBIDY.js
+node_modules/.vite/deps/chunk-6KBGBIDY.js.map
+node_modules/.vite/deps/chunk-77WDZYPT.js
+node_modules/.vite/deps/chunk-77WDZYPT.js.map
+node_modules/.vite/deps/chunk-GCJHTHQI.js
+node_modules/.vite/deps/chunk-GCJHTHQI.js.map
+node_modules/.vite/deps/chunk-GZQBKHWC.js
+node_modules/.vite/deps/chunk-GZQBKHWC.js.map
+node_modules/.vite/deps/chunk-JDMPCMQR.js
+node_modules/.vite/deps/chunk-JDMPCMQR.js.map
+node_modules/.vite/deps/chunk-JK5JMP6W.js
+node_modules/.vite/deps/chunk-JK5JMP6W.js.map
+node_modules/.vite/deps/chunk-LDGLH45D.js
+node_modules/.vite/deps/chunk-LDGLH45D.js.map
+node_modules/.vite/deps/chunk-MIGZBXHG.js
+node_modules/.vite/deps/chunk-MIGZBXHG.js.map
+node_modules/.vite/deps/chunk-MWVBOL5H.js
+node_modules/.vite/deps/chunk-MWVBOL5H.js.map
+node_modules/.vite/deps/chunk-SNBWMP4U.js
+node_modules/.vite/deps/chunk-SNBWMP4U.js.map
+node_modules/.vite/deps/chunk-WWLJ2PJN.js
+node_modules/.vite/deps/chunk-WWLJ2PJN.js.map
+node_modules/.vite/deps/react-virtuoso.js
+node_modules/.vite/deps/react-virtuoso.js.map
+技巧/技巧.md
+技巧/清华大学第二弹：DeepSeek 赋能职场.pdf
+技巧/清华大学第三弹：普通人如何抓住 DeepSeek 红利.pdf
+技巧/清华大学第一弹：DeepSeek 从入门到精通.pdf
+技巧/DeepSeek使用技巧总结.md
+技巧/DeepSeek示例库.md
