修复了移动端导航条样式。

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ node_modules/.vite/deps/react-virtuoso.js.map
 技巧/清华大学第一弹：DeepSeek 从入门到精通.pdf
 技巧/DeepSeek使用技巧总结.md
 技巧/DeepSeek示例库.md
+dist/output_templates.json
+dist/assets/index-Hk4IMwHE.js
