重构使代码结构更加清晰

--- a/.gitignore
+++ b/.gitignore
@@ -1,89 +1,4 @@
-Advancd_Prompt_Generator.py
-node_modules/.vite/deps/_metadata.json
-node_modules/.vite/deps/@mui_icons-material_Brightness4.js
-node_modules/.vite/deps/@mui_icons-material_Brightness4.js.map
-node_modules/.vite/deps/@mui_icons-material_Brightness7.js
-node_modules/.vite/deps/@mui_icons-material_Brightness7.js.map
-node_modules/.vite/deps/@mui_icons-material_ContentCopy.js
-node_modules/.vite/deps/@mui_icons-material_ContentCopy.js.map
-node_modules/.vite/deps/@mui_material_Slider.js
-node_modules/.vite/deps/@mui_material_Slider.js.map
-node_modules/.vite/deps/@mui_material_styles.js
-node_modules/.vite/deps/@mui_material_styles.js.map
-node_modules/.vite/deps/@mui_material.js
-node_modules/.vite/deps/@mui_material.js.map
-node_modules/.vite/deps/@mui_system.js
-node_modules/.vite/deps/@mui_system.js.map
-node_modules/.vite/deps/chunk-5QWUMLGX.js
-node_modules/.vite/deps/chunk-5QWUMLGX.js.map
-node_modules/.vite/deps/chunk-6Q4RNADE.js
-node_modules/.vite/deps/chunk-6Q4RNADE.js.map
-node_modules/.vite/deps/chunk-7MYU63WF.js
-node_modules/.vite/deps/chunk-7MYU63WF.js.map
-node_modules/.vite/deps/chunk-7UAB33O7.js
-node_modules/.vite/deps/chunk-7UAB33O7.js.map
-node_modules/.vite/deps/chunk-BPLDEPTK.js
-node_modules/.vite/deps/chunk-BPLDEPTK.js.map
-node_modules/.vite/deps/chunk-BTT6ZZHU.js
-node_modules/.vite/deps/chunk-BTT6ZZHU.js.map
-node_modules/.vite/deps/chunk-JJ55CD5O.js
-node_modules/.vite/deps/chunk-JJ55CD5O.js.map
-node_modules/.vite/deps/chunk-OJD3DU7S.js
-node_modules/.vite/deps/chunk-OJD3DU7S.js.map
-node_modules/.vite/deps/chunk-QS7WDQIN.js
-node_modules/.vite/deps/chunk-QS7WDQIN.js.map
-node_modules/.vite/deps/chunk-WN4YMD76.js
-node_modules/.vite/deps/chunk-WN4YMD76.js.map
-node_modules/.vite/deps/chunk-YFS6JE7A.js
-node_modules/.vite/deps/chunk-YFS6JE7A.js.map
-node_modules/.vite/deps/chunk-YIVRC3ZW.js
-node_modules/.vite/deps/chunk-YIVRC3ZW.js.map
-node_modules/.vite/deps/package.json
-node_modules/.vite/deps/react-dom_client.js
-node_modules/.vite/deps/react-dom_client.js.map
-node_modules/.vite/deps/react-router-dom.js
-node_modules/.vite/deps/react-router-dom.js.map
-node_modules/.vite/deps/react.js
-node_modules/.vite/deps/react.js.map
-dist/20250223173922.jpg
-dist/agents.json
-dist/index.html
-dist/optimizer-config.json
-dist/presets.json
-dist/assets/donate-B2JACeMf.jpg
-dist/assets/index-B--rgFqT.css
-dist/assets/index-CG9vjefu.js
-docs/code-review.md
-docs/development-progress.md
-node_modules/.vite/deps/chunk-6KBGBIDY.js
-node_modules/.vite/deps/chunk-6KBGBIDY.js.map
-node_modules/.vite/deps/chunk-77WDZYPT.js
-node_modules/.vite/deps/chunk-77WDZYPT.js.map
-node_modules/.vite/deps/chunk-GCJHTHQI.js
-node_modules/.vite/deps/chunk-GCJHTHQI.js.map
-node_modules/.vite/deps/chunk-GZQBKHWC.js
-node_modules/.vite/deps/chunk-GZQBKHWC.js.map
-node_modules/.vite/deps/chunk-JDMPCMQR.js
-node_modules/.vite/deps/chunk-JDMPCMQR.js.map
-node_modules/.vite/deps/chunk-JK5JMP6W.js
-node_modules/.vite/deps/chunk-JK5JMP6W.js.map
-node_modules/.vite/deps/chunk-LDGLH45D.js
-node_modules/.vite/deps/chunk-LDGLH45D.js.map
-node_modules/.vite/deps/chunk-MIGZBXHG.js
-node_modules/.vite/deps/chunk-MIGZBXHG.js.map
-node_modules/.vite/deps/chunk-MWVBOL5H.js
-node_modules/.vite/deps/chunk-MWVBOL5H.js.map
-node_modules/.vite/deps/chunk-SNBWMP4U.js
-node_modules/.vite/deps/chunk-SNBWMP4U.js.map
-node_modules/.vite/deps/chunk-WWLJ2PJN.js
-node_modules/.vite/deps/chunk-WWLJ2PJN.js.map
-node_modules/.vite/deps/react-virtuoso.js
-node_modules/.vite/deps/react-virtuoso.js.map
-技巧/技巧.md
-技巧/清华大学第二弹：DeepSeek 赋能职场.pdf
-技巧/清华大学第三弹：普通人如何抓住 DeepSeek 红利.pdf
-技巧/清华大学第一弹：DeepSeek 从入门到精通.pdf
-技巧/DeepSeek使用技巧总结.md
-技巧/DeepSeek示例库.md
-dist/output_templates.json
-dist/assets/index-Hk4IMwHE.js
+node_modules
+.env
+node_modules
+.env
