--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.0.0",
     "react-router-dom": "^6.20.1",
     "react-virtuoso": "^4.12.5"
   },
